# openfang

./: .env.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  README.md  SECURITY.md  docker-compose.yml  openfang.toml.example
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
agents/analyst/: agent.toml
agents/architect/: agent.toml
agents/assistant/: agent.toml
agents/code-reviewer/: agent.toml
agents/coder/: agent.toml
agents/customer-support/: agent.toml
agents/data-scientist/: agent.toml
agents/debugger/: agent.toml
agents/devops-lead/: agent.toml
agents/doc-writer/: agent.toml
agents/email-assistant/: agent.toml
agents/health-tracker/: agent.toml
agents/hello-world/: agent.toml
agents/home-automation/: agent.toml
agents/legal-assistant/: agent.toml
agents/meeting-assistant/: agent.toml
agents/ops/: agent.toml
agents/orchestrator/: agent.toml
agents/personal-finance/: agent.toml
agents/planner/: agent.toml
agents/recruiter/: agent.toml
agents/researcher/: agent.toml
agents/sales-assistant/: agent.toml
agents/security-auditor/: agent.toml
agents/social-media/: agent.toml
agents/test-engineer/: agent.toml
agents/translator/: agent.toml
agents/travel-planner/: agent.toml
agents/tutor/: agent.toml
agents/writer/: agent.toml
crates/clawforge-api/: Cargo.toml
crates/clawforge-api/src/: channel_bridge.rs  lib.rs  middleware.rs  openai_compat.rs  routes.rs  server.rs  types.rs  webchat.rs  ws.rs
crates/clawforge-api/static/: index_body.html  index_head.html
crates/clawforge-api/static/css/: components.css  layout.css  theme.css
crates/clawforge-api/static/js/: api.js  app.js
crates/clawforge-api/static/js/pages/: agents.js  approvals.js  channels.js  chat.js  comms.js  hands.js  logs.js  overview.js  runtime.js  scheduler.js  sessions.js  settings.js  skills.js  usage.js  wizard.js  workflow-builder.js  workflows.js
crates/clawforge-api/tests/: api_integration_test.rs  daemon_lifecycle_test.rs  load_test.rs
crates/clawforge-channels/: Cargo.toml
crates/clawforge-channels/src/: bluesky.rs  bridge.rs  dingtalk.rs  discord.rs  discourse.rs  email.rs  feishu.rs  flock.rs  formatter.rs  gitter.rs  google_chat.rs  gotify.rs  guilded.rs  irc.rs  keybase.rs  lib.rs  line.rs  linkedin.rs  mastodon.rs  matrix.rs  mattermost.rs  messenger.rs  mumble.rs  nextcloud.rs  nostr.rs  ntfy.rs  pumble.rs  reddit.rs  revolt.rs  rocketchat.rs  router.rs  signal.rs  slack.rs  teams.rs  telegram.rs  threema.rs  twist.rs  twitch.rs  types.rs  viber.rs  (+4 more)
crates/clawforge-channels/tests/: bridge_integration_test.rs
crates/clawforge-cli/: Cargo.toml
crates/clawforge-cli/src/: bundled_agents.rs  dotenv.rs  launcher.rs  main.rs  mcp.rs  templates.rs  ui.rs
crates/clawforge-cli/src/tui/: chat_runner.rs  event.rs  mod.rs  theme.rs
crates/clawforge-cli/src/tui/screens/: agents.rs  audit.rs  chat.rs  comms.rs  dashboard.rs  extensions.rs  hands.rs  init_wizard.rs  logs.rs  memory.rs  peers.rs  sessions.rs  settings.rs  skills.rs  templates.rs  triggers.rs  usage.rs  welcome.rs  wizard.rs  workflows.rs
crates/clawforge-desktop/: Cargo.toml  tauri.conf.json
crates/clawforge-desktop/capabilities/: default.json
crates/clawforge-desktop/src/: commands.rs  lib.rs  main.rs  server.rs  shortcuts.rs  tray.rs  updater.rs
crates/clawforge-extensions/: Cargo.toml
crates/clawforge-extensions/integrations/: github.toml  gmail.toml  (+4 more)
crates/clawforge-hands/: Cargo.toml
crates/clawforge-hands/bundled/browser/: SKILL.md
crates/clawforge-hands/bundled/twitter/: HAND.toml
crates/clawforge-hands/src/: lib.rs  registry.rs
crates/clawforge-kernel/: Cargo.toml
crates/clawforge-kernel/src/: approval.rs  auth.rs  auto_reply.rs  background.rs  capabilities.rs  config.rs  config_reload.rs  cron.rs  error.rs  event_bus.rs  heartbeat.rs  kernel.rs  lib.rs  metering.rs  pairing.rs  registry.rs  scheduler.rs  supervisor.rs  triggers.rs  whatsapp_gateway.rs  wizard.rs  workflow.rs
crates/clawforge-kernel/tests/: integration_test.rs  multi_agent_test.rs  wasm_agent_integration_test.rs  workflow_integration_test.rs
crates/clawforge-master/: Cargo.toml
crates/clawforge-master/src/: error.rs  lib.rs  models.rs  pool.rs  retry.rs  scheduler.rs  splitter.rs  tracker.rs
crates/clawforge-memory/: Cargo.toml
crates/clawforge-migrate/: Cargo.toml
crates/clawforge-runtime/: Cargo.toml
crates/clawforge-runtime/src/: a2a.rs  agent_loop.rs  apply_patch.rs  auth_cooldown.rs  browser.rs  compactor.rs  context_budget.rs  context_overflow.rs  docker_sandbox.rs  embedding.rs  graceful_shutdown.rs  hooks.rs  host_functions.rs  image_gen.rs  kernel_handle.rs  link_understanding.rs  llm_driver.rs  llm_errors.rs  mcp.rs  mcp_server.rs  media_understanding.rs  model_catalog.rs  prompt_builder.rs  python_runtime.rs  retry.rs  routing.rs  sandbox.rs  session_repair.rs  subprocess_sandbox.rs  tool_runner.rs  tts.rs  web_fetch.rs  web_search.rs  workspace_context.rs
crates/clawforge-runtime/src/drivers/: anthropic.rs  claude_code.rs  copilot.rs  fallback.rs  gemini.rs  mod.rs  openai.rs
crates/clawforge-skills/: Cargo.toml
crates/clawforge-skills/src/: bundled.rs  clawhub.rs  lib.rs  marketplace.rs  openclaw_compat.rs  registry.rs
crates/clawforge-types/: Cargo.toml
crates/clawforge-wire/: Cargo.toml
crates/clawforge-wire/src/: lib.rs  message.rs  peer.rs
crates/openfang-runtime/: Cargo.toml
deploy/: openfang.service
docs/: README.md  agent-templates.md  api-reference.md  architecture.md  channel-adapters.md  cli-reference.md  configuration.md  desktop.md  getting-started.md  launch-roadmap.md  mcp-a2a.md  production-checklist.md  providers.md  security.md  skill-development.md  troubleshooting.md  workflows.md
scripts/: install.ps1  install.sh
scripts/docker/: install-smoke.Dockerfile
sdk/javascript/: index.d.ts  index.js  package.json
sdk/python/: openfang_client.py  openfang_sdk.py  setup.py
xtask/: Cargo.toml
xtask/src/: main.rs
(+41 files in other folders)
