[package]
name = "clawforge-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP/WebSocket API server for the ClawForge Agent Core daemon"

[dependencies]
clawforge-types = { path = "../clawforge-types" }
clawforge-kernel = { path = "../clawforge-kernel" }
clawforge-runtime = { path = "../clawforge-runtime" }
clawforge-memory = { path = "../clawforge-memory" }
clawforge-channels = { path = "../clawforge-channels" }
clawforge-wire = { path = "../clawforge-wire" }
clawforge-skills = { path = "../clawforge-skills" }
clawforge-hands = { path = "../clawforge-hands" }
clawforge-extensions = { path = "../clawforge-extensions" }
clawforge-migrate = { path = "../clawforge-migrate" }
dashmap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
tokio-stream = { workspace = true }
subtle = { workspace = true }
base64 = { workspace = true }
socket2 = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
