[package]
name = "clawforge-hands"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hands system for ClawForge — curated autonomous capability packages"

[dependencies]
clawforge-types = { path = "../clawforge-types" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
