[package]
name = "clawforge-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core kernel for the ClawForge Agent Core"

[dependencies]
clawforge-types = { path = "../clawforge-types" }
clawforge-memory = { path = "../clawforge-memory" }
clawforge-runtime = { path = "../clawforge-runtime" }
clawforge-skills = { path = "../clawforge-skills" }
clawforge-hands = { path = "../clawforge-hands" }
clawforge-extensions = { path = "../clawforge-extensions" }
clawforge-wire = { path = "../clawforge-wire" }
clawforge-channels = { path = "../clawforge-channels" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
cron = "0.15"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
