[package]
name = "clawforge-master"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Claw Master - micro-task splitting, worker pool management, and task distribution"

[dependencies]
clawforge-types = { path = "../clawforge-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
