[package]
name = "clawforge-wire"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ClawForge Protocol (CFP) — agent-to-agent networking"

[dependencies]
clawforge-types = { path = "../clawforge-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
